# Rython

./: CMakeLists.txt  DESCRIPTION  NAMESPACE  README.Rmd  README.md
R/: conversion.R  py.R  utility.R
man/: py.Rd  pyfun.Rd
src/: Conversion.cpp  Conversion.h  Makevars  PythonInterface.c  PythonInterface.cpp  PythonInterface.h  RcppExtension.cpp  RcppExtension.h  Rython.cpp  Rython.h  conversion.cpp  conversion.h  redirect.cpp
tests/: conversion.tests.R  pyfun.tests.R
